--- a/index.html
+++ b/index.html
@@ -3,64 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>私のプロフィール</title>
+    <title>私のシンプルなプロフィール - zzZundaStory</title>
     <style>
-        /* ここから下はデザインの指定です */
         body {
             font-family: sans-serif;
-            background-color: #f0f2f5;
+            margin: 40px;
+            background-color: #f4f4f4;
             color: #333;
             line-height: 1.6;
-            margin: 0;
-            padding: 20px;
         }
-        .profile-card {
+        .container {
             max-width: 600px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #ffffff;
+            margin: auto;
+            background: #fff;
+            padding: 20px 30px;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #0056b3;
-            border-bottom: 2px solid #0056b3;
-            padding-bottom: 10px;
+            color: #007bff;
         }
-        .item {
-            margin-bottom: 15px;
+        ul {
+            list-style: none;
+            padding: 0;
         }
-        .item-title {
-            font-weight: bold;
-            color: #555;
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .note {
+            font-size: 0.9em;
+            color: #666;
+            margin-top: 20px;
+            border-top: 1px solid #eee;
+            padding-top: 15px;
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>私のシンプルなプロフィール - zzZundaStory</h1>
+        <p>こんにちは！これはCloudflare Pagesで作成した私の創作サイトです。</p>
+        <ul>
+            <li><strong>名前:</strong> ずんだ</li>
+            <li><strong>趣味:</strong> AIを使ったコンテンツ制作</li>
+            <li><strong>好きなこと:</strong> 新しい物語を想像すること</li>
+            <li><strong>一言:</strong> 皆さんに楽しんでいただけるような作品作りを目指しています！</li>
+            <li><a href="https://example.com" target="_blank">私のSora動画はこちら (今後追加)</a></li>
+        </ul>
 
-    <div class="profile-card">
-        <h1>自己紹介</h1>
+        <hr> <!-- 区切り線 -->
 
-        <div class="item">
-            <div class="item-title">■ 名前</div>
-            <div>ここにあなたの名前やニックネームを入力</div>
-        </div>
+        <h2>私の創作活動について</h2>
+        <p>これまでに**約250本**のショート動画を作成してきました。これらの作品は、私の創作の基盤となっています。</p>
 
-        <div class="item">
-            <div class="item-title">■ ひとこと</div>
-            <div>ここに自己紹介文を入力（趣味、好きなことなど）</div>
-        </div>
+        <h3>ストーリーを紡ぐ原点</h3>
+        <p>部隊がジャングルの奥地で物資が補給され続けるという、この動画から新しい物語を紡いでいきたいと考えています。<br>
+        まめ部隊: <a href="https://sora.chatgpt.com/p/s_691402efab708191a86b2602a89f276a" target="_blank">Sora AI Story Start</a></p>
 
-        <div class="item">
-            <div class="item-title">■ 好きなSoraの動画</div>
-            <div>最近作ったお気に入りの動画について書く場所</div>
-        </div>
+        <h3>モチベーションの源</h3>
+        <p>これまでずんだもん作品を見て補給ばかりでしたが、想像や妄想が簡単に動画化できるツールの登場で供給もできるようになりました。<br>
+        <a href="https://sora.chatgpt.com/p/s_68e9dc615b1481918859f488751ddcaf" target="_blank">Sora AI Motivation Origin</a></p>
 
-        <div class="item">
-            <div class="item-title">■ リンク</div>
-            <div><a href="https://twitter.com/">X (旧Twitter) はこちら</a></div>
-        </div>
+        <hr> <!-- 区切り線 -->
+
+        <h2>リンク</h2>
+        <p>他のソーシャルメディアや関連リンクはこちらでまとめています。</p>
+        <p><a href="https://linktr.ee/zzzundamon" target="_blank">私のLinktreeを見る</a></p>
+
     </div>
-
 </body>
 </html>
