--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li><strong>趣味:</strong> AIを使ったコンテンツ制作</li>
             <li><strong>好きなこと:</strong> 新しい物語を想像すること</li>
             <li><strong>一言:</strong> 皆さんに楽しんでいただけるような作品作りを目指しています！</li>
-            <li><a href="https://example.com" target="_blank">私のSora動画はこちら (今後追加)</a></li>
+            <li><a href="https://sora.chatgpt.com/profile/zzzundamon" target="_blank">私のSora2アカウントです。 (個別動画は誰でもみれますが、Profileの閲覧にはsora.chatgptでのログインが必要になります)</a></li>
         </ul>
 
         <hr> <!-- 区切り線 -->
