--- a/index.html
+++ b/index.html
@@ -55,16 +55,26 @@
             <li><strong>趣味:</strong> AIを使ったコンテンツ制作</li>
             <li><strong>好きなこと:</strong> 新しい物語を想像すること</li>
             <li><strong>一言:</strong> 皆さんに楽しんでいただけるような作品作りを目指しています！</li>
-            <li><a href="https://sora.chatgpt.com/profile/zzzundamon" target="_blank">私のSora2アカウントです。 (個別動画は誰でもみれますが、Profileの閲覧にはsora.chatgptでのログインが必要になります)</a></li>
+            <li><a href="https://sora.chatgpt.com/profile/zzzundamon" target="_blank">私のSora2アカウントです。</a> (個別動画は誰でもみれますが、Profileの閲覧にはsora.chatgptでのログインが必要になります)</li>
         </ul>
 
         <hr> <!-- 区切り線 -->
 
         <h2>私の創作活動について</h2>
         <p>これまでに**約250本**のショート動画を作成してきました。これらの作品は、私の創作の基盤となっています。</p>
+        
+
 
         <h3>ストーリーを紡ぐ原点</h3>
         <p>部隊がジャングルの奥地で物資が補給され続けるという、この動画から新しい物語を紡いでいきたいと考えています。<br>
+        <video 
+    src="https://pub-da1dd7c4a83f48b4bc6da89b03cecb42.r2.dev/19700121_1841_691402efab708191a86b2602a89f276a.mp4" 
+    width="300" 
+    autoplay 
+    loop 
+    muted 
+    playsinline>
+    </video>
         まめ部隊: <a href="https://sora.chatgpt.com/p/s_691402efab708191a86b2602a89f276a" target="_blank">Sora AI Story Start</a></p>
 
         <h3>モチベーションの源</h3>
